--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Renaissance -- France'
 - !lcsh 'French poetry -- 16th century -- History and criticism'
+- GITenberg
 tableOfContents: Charles of Orleans -- Villon -- Marot -- Ronsard -- Du Bellay --
   Malherbe.
 title: 'Avril: Being Essays on the Poetry of the French Renaissance'
